2018-01-25 Wolfgang Hofer <hof@gimp.org>

- use larger spinbutton entries in the MovePath Dialog and bigger inital preview size.
  update MovePath text docmentation.

 * gap/gap_mov_dialog.c
 * docs/reference/txt/plug-in-gap-move-path.txt
 
2018-01-25 Wolfgang Hofer <hof@gimp.org>

- master video encoder provides more information in the error message
  in case creating composite audiofile fails due to problems calling
  the external audioconverter (sox)

- Support L*A*B colorspace based colordiff methods 
  DelteE CIE94 and CIEDE2000  in the bluebox filter

 * gap/gap_colordiff.c [.h]
 * gap/gap_bluebox.c [.h]
 * gap/gap_bluebox_main.c
 * gap/gap_story_render_audio.c

2018-01-19 Wolfgang Hofer <hof@gimp.org>

- applied patch provided by Anders Jonsson @ https://bugzilla.gnome.org/show_bug.cgi?id=792549
  (0001-Fix-typos-in-translatable-strings.txt)
 
 * gap/gap_base_ops.c
 * gap/gap_detail_align_exec.c
 * gap/gap_detail_tracking_main.c
 * gap/gap_edge_detection_dialog.c
 * gap/gap_morph_dialog.c
 * gap/gap_morph_tween_dialog.c
 * gap/gap_mov_dialog.c
 * gap/gap_opacity_exposure_main.c
 * gap/gap_wr_resynth.c
  

2017-10-08 Wolfgang Hofer <hof@gimp.org>

- Fix for Storyboard Audio rendering in case where clips of the same 
  video (AUD_PLAY_MOVIE Storyboardelemnts) are used in more than 
  one audio track of the Storyboard.
  The bug triggered a huge amount of alternating audio segemnt load operations
  in the composite audiofile audiomix processing. This caused extreme slow rendering
  where one minute of audio did not finish in hours.

 * gap/gap_story_render_types.h
 * gap/gap_story_render_audio.c

2017-04-15 Wolfgang Hofer <hof@gimp.org>

- MovePath support Handle Offsets, "Reset all controlpoints" Button protects keyframe information by default
  This change of behavior is a bugfix to prevent unwanted loss of keyframe information in the path controlpoints.
  In case where reset of keyframe information is wanted